--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "redux": "^3.7.2"
   },
   "devDependencies": {
+    "prettier": "1.7.4",
     "react-scripts": "1.0.14"
   },
   "scripts": {
