--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "history": "^4.7.2",
     "material-ui": "^0.19.4",
     "mobx": "^3.3.1",
     "mobx-react": "^4.3.3",
@@ -10,8 +11,8 @@
     "prop-types": "latest",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "prettier": "1.7.4",
