add prettier on staged files

--- a/package.json
+++ b/package.json
@@ -16,10 +16,19 @@
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
-    "prettier": "1.7.4",
+    "husky": "^0.14.3",
+    "lint-staged": "^4.3.0",
+    "prettier": "^1.7.4",
     "react-scripts": "1.0.14"
   },
+  "lint-staged": {
+    "src/**/*.{js,jsx,json,css}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "scripts": {
+    "precommit": "lint-staged",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
