--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "react-test-renderer": "^16.1.1"
   },
   "devDependencies": {
     "husky": "^0.14.3",
