add react component test

--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "private": true,
   "homepage": "http://meltingpoc.k8.wildwidewest.xyz/referentiel-personnes-ui/",
   "dependencies": {
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
+    "enzyme-to-json": "^3.2.2",
     "history": "^4.7.2",
+    "jsdom": "^11.5.1",
+    "jsdom-global": "^3.0.2",
     "lodash": "^4.17.4",
     "material-ui": "^0.19.4",
     "mobx": "^3.3.1",
@@ -15,7 +20,7 @@
     "react-dom": "^16.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-test-renderer": "^16.1.1"
+    "react-test-renderer": "^16.0.0"
   },
   "devDependencies": {
     "husky": "^0.14.3",
@@ -33,7 +38,7 @@
     "precommit": "lint-staged",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test --env=jsdom --updateSnapshot",
     "eject": "react-scripts eject"
   }
 }
