add --updateSnapshot flag

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "precommit": "lint-staged",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --updateSnapshot",
     "eject": "react-scripts eject"
   }
 }
