mise à jour du basename

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -5,9 +5,9 @@ events {
 http {
   server {
     listen 8080;
-    server_name referentiel-personnes-ui;
+    server_name gestion-personnes-react;
 
-    root /referentiel-personnes-ui;
+    root /gestion-personnes-react;
     index index.html;
   }
 }
